# HuaWeiNav

./: .dockerignore  .gitignore  README.md  config_utils.py  constants.py  docker_en.sh  mapper_with_process_obs.py  objnav_agent_with_process_obs.py  objnav_benchmark_with_process_obs.py
artifact_utils/: __init__.py  path_builder.py  pointcloud_writer.py
benchmark/: __init__.py  contracts.py  episode_index.py  gibson_objectnav.py  habitat_configs.py  hm3d_objectnav.py  hm3d_ovon.py  providers.py
cv_utils/: gpt_utils.py
docker/: Dockerfile  Dockerfile.real_robot  build.sh  build_real_robot.sh  preflight.py  preflight.sh  real_robot.env.example  run_hm3d_baseline.sh  run_real_robot_sysnav_stack.sh  run_scene_object_nav.sh
docs/: benchmark_providers.md  changelog.md  hm3d_docker_benchmark_guide.md  instruction_adapter.md  project_technical_whitepaper.md  project_technical_whitepaper.tex  real_robot_deployment.md  refactor_architecture.md  strive_hm3d_system_framework.md
instruction_adapter/: __init__.py  compiler.py  concept_matcher.py  constraints.py  contracts.py  execution.py  grounding.py  ontology.py  parser.py  parser_llm.py  parser_metadata.py  prompt_context.py  relation_verifier.py  semantic_edges.py  spatial_graph.py  verifier.py  view_control.py
llm_utils/: cognav_llm_adapter.py  lvlm_call_tracker.py  nav_prompt_room.py
mapping/: __init__.py  frontier_clusterer.py  frontier_extractor.py  map_serializer.py  node_candidate_builder.py  room_segmenter.py  topology_graph.py
mapping_utils/: transform.py
navigation/: __init__.py  action_controller.py  bbox_refinement.py  detection_artifacts.py  panoramic_detection.py  (+7 more)
real_robot/ros2_ws/src/semantic_mapping/: package.xml  setup.py
real_robot/ros2_ws/src/semantic_mapping/semantic_mapping/: detection_node.py  semantic_map_new.py  semantic_mapping_node.py  single_object_new.py  utils.py
real_robot/ros2_ws/src/semantic_mapping/semantic_mapping/tools/: __init__.py  ros2_bag_utils.py
real_robot/ros2_ws/src/tare_planner/: CMakeLists.txt  package.xml
(+40 files in other folders)
